--- a/sim/public/simulator.html
+++ b/sim/public/simulator.html
@@ -12,7 +12,7 @@
         }
     </style>
     <script src="/cdn/bluebird.min.js"></script>
-    <script src="/cdn/kindsim.js"></script>
+    <script src="/cdn/pxtsim.js"></script>
     <script src="/sim/sim.js"></script>
 </head>
 
