--- a/sim/public/simulator.html
+++ b/sim/public/simulator.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>sample simulator</title>
+    <title>AirSim logger</title>
     <link rel="stylesheet" type="text/css" href="/sim/sim.css">
     <style>
         body {
@@ -17,7 +17,6 @@
 </head>
 
 <body>
-    <svg id='svgcanvas' xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 280">
-        <circle id='svgsprite' cx="100" cy="100" r="50" class="sprite" />
-    </svg>
+    <div id='sim'>
+    </div>
 </body>
