--- a/sim/public/simulator.html
+++ b/sim/public/simulator.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="utf-8">
+    <title>sample simulator</title>
     <link rel="stylesheet" type="text/css" href="/sim/sim.css">
     <style>
         body {
@@ -16,6 +17,7 @@
 </head>
 
 <body>
-    <div id='sim'>
-    </div>
+    <svg id='svgcanvas' xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 280">
+        <circle id='svgsprite' cx="100" cy="100" r="50" class="sprite" />
+    </svg>
 </body>
