--- a/sim/public/simulator.html
+++ b/sim/public/simulator.html
@@ -19,5 +19,6 @@
 <body>
     <svg id='svgcanvas' xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 280">
         <circle id='svgsprite' cx="100" cy="100" r="50" class="sprite" />
+        <circle id='svgsprite2' cx="50" cy="50" r="25" class="sprite" />
     </svg>
 </body>
