--- a/sim/public/simulator.html
+++ b/sim/public/simulator.html
@@ -20,4 +20,26 @@
     <svg id='svgcanvas' xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 280">
         <circle id='svgsprite' cx="100" cy="100" r="50" class="sprite" />
     </svg>
+    <script>
+        let sims = parent.document.getElementById("simulators");
+
+
+        /* Code for putting user ID box outside of sim frame */
+        let userIdForm = parent.document.createElement("FORM");
+        let fieldSet = parent.document.createElement("FIELDSET");
+        fieldSet.setAttribute("disabled", "disabled");  
+        fieldSet.setAttribute("style", "display: inline-block;");
+        let legend = parent.document.createElement("LEGEND");
+        legend.innerHTML = "user id";      
+        let userIdInput = parent.document.createElement("INPUT");
+        userIdInput.setAttribute("id", "userid");
+        userIdInput.value = "";
+        userIdInput.setAttribute("type", "text");
+        userIdInput.setAttribute("name", "userId");
+        fieldSet.appendChild(legend);
+        fieldSet.appendChild(userIdInput);
+        userIdForm.appendChild(fieldSet);
+        sims.appendChild(userIdForm);
+
+    </script>
 </body>
