Added PeerJS code, updated netsimple to use it.
Signed-off-by: William Temple <William.Temple@colorado.edu>

--- a/sim/public/simulator.html
+++ b/sim/public/simulator.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>sample simulator</title>
+    <title>PXT PI APPARATUS</title>
     <link rel="stylesheet" type="text/css" href="/sim/sim.css">
     <style>
         body {
@@ -17,8 +17,12 @@
 </head>
 
 <body>
-    <svg id='svgcanvas' xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 280">
-        <circle id='svgsprite' cx="100" cy="100" r="50" class="sprite" />
-        <circle id='svgsprite2' cx="50" cy="50" r="25" class="sprite" />
-    </svg>
+    <img class="board" src="Raspberry_Pi_3_illustration.svg" />
+    <table id="eventTable">
+        <tr>
+            <th>Type</th>
+            <th>Message</th>
+            <th>Time</th>
+        </tr>
+    </table>
 </body>
