Updated theme, hotfixed networking, enabled message passing through API.
Signed-off-by: William Temple <William.Temple@colorado.edu>

--- a/sim/public/simulator.html
+++ b/sim/public/simulator.html
@@ -8,7 +8,7 @@
     <style>
         body {
             background: transparent;
-            overflow: hidden;
+            /*overflow: hidden;*/
         }
     </style>
     <script src="/cdn/bluebird.min.js"></script>
