all in and out connectors now use same DMXConnector class

--- a/sim/public/dmx-extension/index.html
+++ b/sim/public/dmx-extension/index.html
@@ -12,6 +12,7 @@
         <script src="./universe.js"></script>
         <script src="./fixture.js"></script>
         <script src="./rgbfixture.js"></script>
+        <script src="./dmxconnector.js"></script>
         <script src="./channel.js"></script>
         <script src="./cable.js"></script>
         <script src="./downloadProject.js"></script>
